Fixed letter-spacing

--- a/styles/breakpoints/bases/_base_aboutMe.scss
+++ b/styles/breakpoints/bases/_base_aboutMe.scss
@@ -18,7 +18,7 @@
       font-family: $neonFontFamily;
       text-align: center;
       padding-bottom: $basePadding;
-      letter-spacing: -1px;
+      letter-spacing: -3px;
     }
   }
 
